fix java 11 warnings