@@ -2,6 +2,7 @@ package au.com.vaadinutils.jasper.scheduler;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.sql.Connection;
 import java.util.Collection;
@@ -41,7 +42,8 @@ public class ReportEmailRunnerImpl implements ReportEmailRunner, JasperReportPro
 	@Override
 	public boolean runReport(ReportEmailSchedule schedule, Date scheduledTime, JasperEmailSettings emailSettings)
 			throws InterruptedException, IOException, EmailException, InstantiationException, IllegalAccessException,
-			AddressException, ClassNotFoundException, URISyntaxException
+			AddressException, ClassNotFoundException, URISyntaxException, IllegalArgumentException,
+			InvocationTargetException, NoSuchMethodException, SecurityException
 	{
 		Preconditions.checkNotNull(schedule.getSendersEmailAddress(), "Missing senders email address.");
 		Preconditions.checkNotNull(schedule.getRecipients(), "Missing recipient email address");
@@ -49,7 +51,7 @@ public class ReportEmailRunnerImpl implements ReportEmailRunner, JasperReportPro
 
 		Class<? extends JasperReportProperties> jrpClass = schedule.getJasperReportPropertiesClass();
 
-		jasperReportProperties = jrpClass.newInstance();
+		jasperReportProperties = jrpClass.getDeclaredConstructor().newInstance();
 		this.schedule = schedule;
 
 		jasperReportProperties = new JasperReportPropertiesAlternateFile(schedule.getReportTitle(),
