@@ -1,10 +1,12 @@
 package au.com.vaadinutils.ui;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.concurrent.atomic.AtomicReference;
 
 import javax.validation.ConstraintViolationException;
 
+import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.vaadin.teemu.wizards.WizardStep;
 
@@ -18,8 +20,6 @@ import com.vaadin.data.fieldgroup.FieldGroup.CommitException;
 import com.vaadin.ui.Component;
 import com.vaadin.ui.Notification;
 import com.vaadin.ui.Notification.Type;
-
-import org.apache.logging.log4j.LogManager;
 
 import au.com.vaadinutils.crud.CrudEntity;
 import au.com.vaadinutils.crud.FormHelper;
@@ -66,16 +66,12 @@ public abstract class SingleEntityWizardStep<E extends CrudEntity> implements Wi
 				try
 				{
 					isNew = true;
-					entity = entityClass.newInstance();
+					entity = entityClass.getDeclaredConstructor().newInstance();
 					initEntity(entity);
 					entityItem = container.createEntityItem(entity);
 				}
-				catch (InstantiationException e)
-				{
-					logger.error(e, e);
-					throw new RuntimeException(e);
-				}
-				catch (IllegalAccessException e)
+				catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+						| InvocationTargetException | NoSuchMethodException | SecurityException e)
 				{
 					logger.error(e, e);
 					throw new RuntimeException(e);
